--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
     <body>
        
         <div id="container">
-            <a class="animated zoomInLeft button blue" href="damage">Damage Calculator</a>
-            <a class="animated zoomInRight button green" href="characters">Character Table</a>
-            <a class="animated zoomInLeft button yellow" href="drops">Drop Table</a>
-            <a class="animated zoomInRight button red" href="mats">Evolution Helper</a>
-            <a class="animated zoomInLeft button purple" href="slots">Slot Planner</a>
-	    <a class="animated zoomInRight button pink" href="probability">Probability Calculator</a>
+            <a class="animated zoomInLeft button blue" href="damage">Calculadora de Daño</a>
+            <a class="animated zoomInRight button green" href="characters">Lista de personajes</a>
+            <a class="animated zoomInLeft button yellow" href="drops">Lista de recompensas</a>
+            <a class="animated zoomInRight button red" href="mats">Asistente de evolución</a>
+            <a class="animated zoomInLeft button purple" href="slots">Asistente de sockets</a>
+	    <a class="animated zoomInRight button pink" href="probability">Calculadora de probabilidad</a>
 <!--
             <a class="animated zoomInLeft button brown" href="turtles">Turtle Times</a>
 -->
