--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <body>
        
         <div id="container">
-            <a class="animated zoomInLeft button blue" href="damage">Calculadora de Daño</a>
+            <a class="animated zoomInLeft button blue" href="damage">Calculadora de daño</a>
             <a class="animated zoomInRight button green" href="characters">Lista de personajes</a>
             <a class="animated zoomInLeft button yellow" href="drops">Lista de recompensas</a>
             <a class="animated zoomInRight button red" href="mats">Asistente de evolución</a>
