--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
             <p>31/10/2016</p>
             <br>
             <ul>
-                <li>Added New Sugofest Unit details</li>
-                <li>Garp Ship added to Calculator</li>
+                <li>Añadidos detalles nuevas unidades Sugofest</li>
+                <li>El barco de Garp añadido a la calculadora</li>
                 <br>
-                <li>Jailbreak And Halloween Units Added</li>
+                <li>Unidades Escape de Marineford y Halloween añadidas</li>
                 <br>
-                <li>Akainu Raid Boss is Up!</li>
+                <li>Raid Boss de Akainu listo</li>
                 <br>
-                <li>Love, Zeenigami & Mondfischer & Team<li>
+                <li>Translated by joseic1998<li>
                 <br>
             </ul>
             <table id="table">
