--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div id="empty">
         </div>
         <div class="animated zoomIn blue" id="changelog">
-            <p id="update">Updates</p>
+            <p id="update">Actualizaciones</p>
 
             <p>31/10/2016</p>
             <br>
@@ -78,7 +78,7 @@
                 <br>
             </ul>
             <table id="table">
-                   <p>Recently Added:</p>
+                   <p>Añadidos recientemente:</p>
                     <tbody>
                         <tr>
                             <td id="newUnits">
