--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <br>
                 <li>Raid Boss de Akainu listo</li>
                 <br>
-                <li>Translated by joseicOPTC<li>
+                <li>Traducido por joseicOPTC<li>
                 <br>
             </ul>
             <table id="table">
