--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
         <div class="animated zoomIn blue" id="changelog">
             <p id="update">Actualizaciones</p>
 
-            <p>31/10/2016</p>
+            <p>14/11/2016</p>
             <br>
             <ul>
-                <li>Añadidos detalles nuevas unidades Sugofest</li>
-                <li>El barco de Garp añadido a la calculadora</li>
+                <li>Unidades del sugofest de Akainu completas</li>
+                <li>El barco de Law añadido a la calculadora</li>
                 <br>
-                <li>Unidades Escape de Marineford y Halloween añadidas</li>
+                <li>Unidades Tontatta Warriors y Halloween añadidas</li>
                 <br>
-                <li>Raid Boss de Akainu listo</li>
+                <li>Previews para las nuevas unidades añadidas</li>
                 <br>
-                <li>Traducido por joseicOPTC<li>
+                <li>Traducido por joseicOPTC (Reportes en Youtube: joseicOPTC)<li>
                 <br>
             </ul>
             <table id="table">
