--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-86986702-1', 'auto');
+  ga('create', 'UA-73715806-1', 'auto');
   ga('send', 'pageview');
 
 </script>
@@ -47,6 +47,49 @@
     </head>
 
     <body>
+       
+        <div id="container">
+            <a class="animated zoomInLeft button blue" href="damage">Damage Calculator</a>
+            <a class="animated zoomInRight button green" href="characters">Character Table</a>
+            <a class="animated zoomInLeft button yellow" href="drops">Drop Table</a>
+            <a class="animated zoomInRight button red" href="mats">Evolution Helper</a>
+            <a class="animated zoomInLeft button purple" href="slots">Slot Planner</a>
+	    <a class="animated zoomInRight button pink" href="probability">Probability Calculator</a>
+<!--
+            <a class="animated zoomInLeft button brown" href="turtles">Turtle Times</a>
+-->
+        </div> 
+        <div id="empty">
+        </div>
+        <div class="animated zoomIn blue" id="changelog">
+            <p id="update">Updates</p>
+
+            <p>14/11/2016</p>
+            <br>
+            <ul>
+                <li>Akainu Sugofest Units Completed</li>
+                <li>Law Ship added to Calculator</li>
+                <br>
+                <li>Tontatta Warriors And Halloween Units Added</li>
+                <br>
+                <li>Previews for New Units Added</li>
+                <br>
+                <li>Love, Zeenigami & Mondfischer & Team<li>
+                <br>
+            </ul>
+            <table id="table">
+                   <p>Recently Added:</p>
+                    <tbody>
+                        <tr>
+                            <td id="newUnits">
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+        </div>
+    </body>
+
+</html>
        
         <div id="container">
             <a class="animated zoomInLeft button blue" href="damage">Calculadora de daño</a>
