--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-73715806-1', 'auto');
+  ga('create', 'UA-86986702-1', 'auto');
   ga('send', 'pageview');
 
 </script>
@@ -49,12 +49,12 @@
     <body>
        
         <div id="container">
-            <a class="animated zoomInLeft button blue" href="damage">Damage Calculator</a>
-            <a class="animated zoomInRight button green" href="characters">Character Table</a>
-            <a class="animated zoomInLeft button yellow" href="drops">Drop Table</a>
-            <a class="animated zoomInRight button red" href="mats">Evolution Helper</a>
-            <a class="animated zoomInLeft button purple" href="slots">Slot Planner</a>
-	    <a class="animated zoomInRight button pink" href="probability">Probability Calculator</a>
+            <a class="animated zoomInLeft button blue" href="damage">Calculadora de daño</a>
+            <a class="animated zoomInRight button green" href="characters">Lista de personajes</a>
+            <a class="animated zoomInLeft button yellow" href="drops">Tabla de recompensas</a>
+            <a class="animated zoomInRight button red" href="mats">Asistente de evolución</a>
+            <a class="animated zoomInLeft button purple" href="slots">Planeador de habilidades</a>
+	    <a class="animated zoomInRight button pink" href="probability">Calculadora de probabilidad</a>
 <!--
             <a class="animated zoomInLeft button brown" href="turtles">Turtle Times</a>
 -->
@@ -67,18 +67,18 @@
             <p>14/11/2016</p>
             <br>
             <ul>
-                <li>Akainu Sugofest Units Completed</li>
-                <li>Law Ship added to Calculator</li>
+                <li>Completado la reunión de los sombreros de paja</li>
+                <li>Submarino de Law añadido</li>
                 <br>
-                <li>Tontatta Warriors And Halloween Units Added</li>
+                <li>Los piratas de Big Mom añadidos</li>
                 <br>
-                <li>Previews for New Units Added</li>
+                <li>Adelanto de nuevas unidades añadido</li>
                 <br>
-                <li>Love, Zeenigami & Mondfischer & Team<li>
+                <li>Traducido por joseic1998 (Contacto: Youtube (joseicOPTC)<li>
                 <br>
             </ul>
             <table id="table">
-                   <p>Recently Added:</p>
+                   <p>Añadidas recientemente:</p>
                     <tbody>
                         <tr>
                             <td id="newUnits">
